--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: BURTON B4RN
 subtitle: Bringing Super Fast Internet to Burton-in-Kendal
 use-site-title: true
-bigimg: /img/lakes.jpg
+bigimg: /img/burton4.jpg
 ---
 <h3 style="text-align:center"><a target="_blank" href="/assets/Share-application-form-B4RN-V5.1-21.9.17.pdf">Download the Share Application Form <em class="fa fa-download"></em></a></h3>
 
